--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 #root {
-  max-width: 1280px;
+  max-width: 400px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 1rem;
   text-align: center;
+  height: 100vh;
+  width: 100%;
 }
